[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
pedantic = "deny"

[package]
name = "siliconv"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
siliconv_core = { path = "crates/siliconv_core" }
siliconv_formats = { path = "crates/siliconv_formats" }
wasm-bindgen = "0.2.92"
# Добавь эту строку обязательно:
serde-wasm-bindgen = "0.6.5" 

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
