[package]
name = "siliconv_core"
version.workspace = true
edition.workspace = true

[lib]
# Позволяет компилировать в WASM
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "2.0.17"
# ВОТ ЭТА СТРОЧКА ИСПРАВИТ ОШИБКУ:
siliconv_formats = { path = "../siliconv_formats" }

# Зависимости для работы с браузером
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[lints]
workspace = true
